<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">随心而乐</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="my_music">我的音乐</string>
    <string name="other_functions">其他功能</string>
    <string name="there_is_no_song_yet">没有歌曲</string>
    <string name="local_music">本地音乐</string>
    <string name="unknown_artist">未知艺术家</string>
    <string name="are_you_sure_to_exit">您确定退出吗？</string>
    <string name="feedback">意见反馈</string>
    <string name="sumbit">提交</string>
    <string name="please_input_feedback">请输入反馈信息，感谢您的支持</string>
    <string name="select_email_app">请选择邮件发送软件</string>
    <string name="email_title">随心而乐的意见反馈</string>
    <string name="loading_hardly">正在努力加载...</string>
    <string name="about">本播放器是作者利用业余时间开发的小应用，仅供学习交流使用，源码可访问https://github.com/lq910328/XpressMusic 获取。如有更好的建议或心得请发送反馈信息，非常感谢您的支持</string>

    <!-- 系统设置 -->
    <string name="system_setting">系统设置</string>
    <string name="lyric_setting">歌词设置</string>
    <string name="file_filter">文件过滤</string>
    <string name="other_settings">其他设置</string>
    <string name="download_lyric_automatically">自动下载歌词</string>
    <string name="download_lyric_automatically_summary">不会占用太多流量，建议开启</string>
    <string name="lyric_save_path">歌词保存路径</string>
    <string name="reset_to_default">恢复默认设置</string>
    <string name="filter_by_size">按大小过滤</string>
    <string name="filter_by_size_summary">可以过滤掉一些过小的音频文件</string>
    <string name="filter_by_duration">按时长过滤</string>
    <string name="filter_by_duration_summary">可以过滤掉一些时长过短的音频文件</string>
    <string name="are_you_sure_to_reset_default">您确定要恢复默认设置吗</string>
    <string name="choose_lyric_save_path">选择歌词保存路径</string>
    <string name="create_new_folder">新建目录</string>
    <string name="current">当前：</string>
    <string name="there_is_a_duplicated_folder">已存在同名目录</string>

    <!-- 播放界面 -->
    <string name="playmode_repeat">循环播放</string>
    <string name="playmode_repeat_single">单曲循环</string>
    <string name="playmode_shuffle">随机播放</string>
    <string name="playmode_sequential">顺序播放</string>
    <string name="there_is_no_lyric_yet">暂无歌词</string>
    <string name="lyric_Loading">正在加载歌词</string>

    <!-- 排序、分类 -->
    <string name="sort_by_music_name">按歌曲名称排序</string>
    <string name="sort_by_artist">按歌手名称排序</string>
    <string name="sort_by_album">按专辑名称排序</string>
    <string name="sort_by_music_count">按歌曲数量排序</string>
    <string name="classify_by_artist">按歌手分类</string>
    <string name="classify_by_album">按专辑分类</string>
    <string name="classify_by_folder">按文件夹分类</string>
    <string name="sort_by_playlist_name">按名称排序</string>
    <string name="sort_by_playlist_created_time">按创建时间排序</string>
    <string name="sort_by_playlist_modified_time">按修改时间排序</string>
    <string name="sort_by_folder_name">按文件夹名称排序</string>
    <string name="sort_by_last_modify_time">按上次修改时间排序</string>

    <!-- 歌曲列表操作 -->
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="collect">收藏</string>
    <string name="sdcard_cannot_use">SD卡暂时不可用</string>
    <string name="add_to">添加到</string>
    <string name="add_success">添加成功</string>
    <string name="add_to_playlist">添加到播放列表</string>
    <string name="delete">删除</string>
    <string name="confirm_delete_song_file">您确定要从外存上删除歌曲吗？</string>
    <string name="confirm_clear_playqueue">您确定要清空列表吗？</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_failed">删除失败</string>

    <!-- 播放列表操作 -->
    <string name="local_playlist">本地播放列表</string>
    <string name="input_playlist_name">请输入列表名称</string>
    <string name="create_playlist">新建列表</string>
    <string name="song_has_already_existed">歌曲已经存在</string>
    <string name="playlist_has_already_existed">列表名已经存在</string>
    <string name="are_you_sure_to_delete">您确定删除</string>
    <string name="question_mark">？</string>
    <string name="rename">重命名</string>
    <string name="confirm_remove_song_from_playlist">您确定移除(不会删除文件)?</string>
    <string name="remove">移除</string>
    <string name="remove_success">移除成功</string>

    <!-- 歌曲详细信息 -->
    <string name="song_infomation">歌曲信息</string>
    <string name="song_name">歌曲名称</string>
    <string name="check_detail">查看信息</string>
    <string name="artist">艺术家</string>
    <string name="file_format">文件格式</string>
    <string name="file_size">文件大小</string>
    <string name="file_path">文件路径</string>
    <string name="song_duration">播放时长</string>
    <string name="close">关闭</string>

    <!-- 歌曲列表的操作 -->
    <string name="mutiple_choose">多选</string>
    <string name="play_all">全部播放</string>

    <!-- 歌曲列表的搜索框 -->
    <string name="search">查找</string>
    <string name="please_input_jianpin_or_quanpin">请输入简拼或全拼</string>
    <string name="please_input_song_or_artist_name">请输入歌曲名称或歌手名称</string>

    <!-- 多选界面界面 -->
    <string name="has_selected">已选</string>
    <string name="a_piece_of_song">首歌</string>
    <string name="select_all">全选</string>
    <string name="play_later">稍后播放</string>
    <string name="add_songs">添加歌曲</string>
    <string name="please_select_play_song_first">请先选择要播放的歌曲</string>
    <string name="please_select_delete_song_first">请先选择要删除的歌曲</string>
    <string name="please_select_add_song_first">请先选择要添加的歌曲</string>

    <!-- 播放队列界面 -->
    <string name="playqueue">播放队列</string>
    <string name="clear">清空</string>

</resources>