<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/top_of_local_music"
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:clickable="true"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/menu_navigation"
            android:layout_width="54dip"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/menu_navigation" />

        <View
            android:id="@+id/section_line_vertical"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@id/menu_navigation"
            android:background="#ccffffff" />

        <ImageView
            android:id="@+id/more_functions"
            android:layout_width="54dip"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/overflow" />

        <TextView
            android:id="@+id/title_of_local_music"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_toLeftOf="@id/more_functions"
            android:layout_toRightOf="@id/section_line_vertical"
            android:gravity="left|center_vertical"
            android:text="@string/local_music"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="false" />
    </RelativeLayout>

    <View
        android:id="@+id/section_line_horizental"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/top_of_local_music"
        android:background="@color/holo_blue_dark" >
    </View>

    <ListView
        android:id="@+id/listview_local_music"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/section_line_horizental"
        android:cacheColorHint="#00000000"
        android:fastScrollEnabled="true" >
    </ListView>

    <ProgressBar
        android:id="@+id/progressbar_loading_local_music"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textview_local_music_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/there_is_no_song_yet"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone" />

</RelativeLayout>