<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_local_music"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/top_of_local_music" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/grey_dark_light"
        android:orientation="vertical"
        android:showDividers="middle" >

        <LinearLayout
            android:id="@+id/track_operations"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/grey_dark_light2"
            android:baselineAligned="true"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/btn_play_all"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_backround_light"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_list_common_bar_header_allplay"
                    android:gravity="center_vertical"
                    android:text="@string/play_all"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_backround_light"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_list_common_bar_header_search"
                    android:gravity="center_vertical"
                    android:text="@string/search"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_mutiple_choose"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_backround_light"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_list_common_bar_header_editmode"
                    android:gravity="center_vertical"
                    android:text="@string/mutiple_choose"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>

        <ListView
            android:id="@+id/listview_local_music"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="#00000000"
            android:fastScrollEnabled="true" >
        </ListView>
    </LinearLayout>

</LinearLayout>